# woosh

./: .gitignore  Makefile  README.md  install.py  main.py  pyproject.toml  start.py
company_finder/: __init__.py  classify.py  config.py  enrich.py  models.py  search.py
tests/: test_classify.py  test_search.py  test_vies.py
woosh/: __init__.py  classify.py  search.py  vies.py
woosh/backend/: __init__.py  app.py  classify.py  config.py  requirements.txt  search.py  vies.py
woosh/backend/tests/: test_classify.py  test_search.py  test_vies.py
woosh/frontend/: .gitignore  package-lock.json  package.json
woosh/frontend/src/app/: layout.tsx  page.tsx
