[project]
name = "company-finder"
version = "0.1.0"
description = "Trova e arricchisci i dati di un'azienda partendo dalla Partita IVA"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "rich",
    "pydantic",
    "zeep",     # per VIES SOAP
    "ddgs",
    "mypy",
    "black",
    "isort",
    "pytest",
    "flake8",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
strict_optional = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
extend-ignore = ["E203", "W503", "E501"]
exclude = [".venv", "__pycache__", "build", "dist"]
max-line-length = 88
