[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "woosh"
version = "0.1.0"
description = "Search and categorize company information"
requires-python = ">=3.8"
authors = [
    {name = "Andrea"}
]
readme = "README.md"

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.6",
    "duckduckgo-search==7.0.1",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
    "isort",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["woosh"]
include = ["backend*"]
exclude = ["tests*", "results*", "frontend*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
strict_optional = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py38"
